# arduino_roku_remote

./: LICENSE  POC1.ino  README.md
POC1/: POC1.ino
PROTO2/: PROTO2.ino  led_functions.cpp  led_functions.h  roku_ip_discovery.cpp  roku_ip_discovery.h  wifi_command_handler.cpp  wifi_command_handler.h
laptop_test_code/: .gitignore  CMakeLists.txt  README.md  main.cpp  rokuIPDiscovery.cpp  rokuSendCommand.cpp
